<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$ForecastFragment">


    <ListView
        android:id="@+id/list_view_app"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/toolbar_height" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_cout_textview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:background="@color/tool_product"
            android:gravity="center"
            android:padding="@dimen/padding_medium"
            android:textColor="@color/green_dark" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:background="@color/tool_sort"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_medium">

            <TextView
                android:id="@+id/sort_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_large"
                android:gravity="center_vertical"
                android:text="@string/sort"
                android:textColor="@color/sort_label"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/sort_level"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/inapp_tv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_centerVertical="true"
                    android:layout_weight=".5"
                    android:background="@drawable/enabled"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:minWidth="@dimen/sort_button_width"
                    android:paddingLeft="@dimen/padding_medium"
                    android:paddingRight="@dimen/padding_medium"
                    android:text="@string/purchase"
                    android:textColor="@color/white"
                    android:textStyle="bold"

                    />

                <TextView
                    android:id="@+id/rating_tv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_centerVertical="true"
                    android:layout_weight=".5"
                    android:background="@drawable/enabled"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    android:minWidth="@dimen/sort_button_width"
                    android:paddingLeft="@dimen/padding_medium"
                    android:paddingRight="@dimen/padding_medium"
                    android:text="@string/rating"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            style="@android:style/Widget.Holo.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </LinearLayout>
</FrameLayout>
