<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/padding_medium"
    android:paddingTop="@dimen/padding_medium"
    tools:context="com.adobecontest.android.apphub.activity.AppDetailActivity$PlaceholderFragment">

    <RelativeLayout
        android:id="@+id/product_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="@dimen/logo_placeholder"
            android:layout_height="@dimen/logo_placeholder"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/margin_large"
            android:src="@drawable/adobe" />

        <TextView
            android:id="@+id/name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_toRightOf="@id/logo_image"
            android:text="hey"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/rating_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_textview"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_toRightOf="@id/logo_image"
            android:drawableLeft="@drawable/star"
            android:gravity="center_vertical"
            android:text="jkal" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_header"
        android:orientation="vertical">
        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="80dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/type_head_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_huge"
                    android:gravity="center_vertical"
                    android:text="@string/type"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/divider"
                    layout="@layout/vertical_divider"
                    android:layout_width="@dimen/divider_width"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/type_head_textview" />

                <TextView
                    android:id="@+id/type_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"

                    android:layout_marginLeft="@dimen/margin_huge"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_toRightOf="@+id/divider"
                    android:gravity="center_vertical"
                    android:text="akdla"
                    android:textSize="@dimen/text_medium" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <!-- for purchase -->
        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="80dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/purchase_head_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_huge"
                    android:gravity="center_vertical"
                    android:text="@string/purchase"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/divider"
                    layout="@layout/vertical_divider"
                    android:layout_width="@dimen/divider_width"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/purchase_head_textview" />

                <TextView
                    android:id="@+id/purchase_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/margin_huge"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_toRightOf="@+id/divider"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <!-- Last updated-->
        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

            android:layout_width="match_parent"
            android:layout_height="80dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/update_head_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/margin_medium"
                    android:layout_marginRight="@dimen/margin_huge"
                    android:gravity="center_vertical"
                    android:text="@string/updated"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/divider"
                    layout="@layout/vertical_divider"
                    android:layout_width="@dimen/divider_width"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/update_head_textview" />

                <TextView
                    android:id="@+id/update_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"

                    android:layout_marginLeft="@dimen/margin_huge"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_toRightOf="@+id/divider"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_medium" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
